@@ -4,6 +4,10 @@ glibc (2.29-2) UNRELEASED; urgency=medium
   * debian/control.in/main: drop the <!nocheck> profle from the
     python3:native build-depends.  Closes: #939871.
 
+  [ Sven Joachim ]
+  * debian/script.in/nsscheck.sh: Do not restart services of different
+    architecture than libc.  Closes: #700472.
+
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 09 Sep 2019 22:35:15 +0200
 
 glibc (2.29-1) unstable; urgency=medium
